--- a/navtelemator/navtelemator/templates/info/room/roominfo_circuits.html
+++ b/navtelemator/navtelemator/templates/info/room/roominfo_circuits.html
@@ -5,7 +5,7 @@
     </tr>
     {% for circuit_detail in circuit_details %}
     <tr>
-        <td>{{circuit_detail.circuit}}</td>
+        <td><a href="{{ circuit_detail.circuit.get_absolute_url }}">{{circuit_detail.circuit}}</a></td>
         <td>{{circuit_detail.index}}</td>
     </tr>
     {% endfor %}
