Started implementing search and added templates

--- a/navtelemator/navtelemator/templates/telemator/circuit_list.html
+++ b/navtelemator/navtelemator/templates/telemator/circuit_list.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{% block base_content %}
 <table>
     <tr>
         <th>Circuit</th>
@@ -8,3 +10,4 @@
     </tr>
     {% endfor %}
 </table>
+{% endblock %}
