--- a/navtelemator/navtelemator/templates/telemator/circuit_list.html
+++ b/navtelemator/navtelemator/templates/telemator/circuit_list.html
@@ -3,10 +3,12 @@
 <table>
     <tr>
         <th>Circuit</th>
+        <th>Alias</th>
     </tr>
     {% for circuit in circuits %}
     <tr>
-        <td>{{circuit}}</td>
+        <td><a href="{{ circuit.get_absolute_url }}">{{circuit}}</a></td>
+        <td>{{circuit.alias}}</td>
     </tr>
     {% endfor %}
 </table>
