--- a/navtelemator/navtelemator/templates/telemator/circuit_info.html
+++ b/navtelemator/navtelemator/templates/telemator/circuit_info.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{% block base_content %}
 <h1>{{circuit.name}}</h1>
 <table>
     <tr>
@@ -11,3 +13,4 @@
     </tr>
     {% endfor %}
 </table>
+{% endblock %}
