--- a/navtelemator/navtelemator/templates/info/room/roominfo_circuits.html
+++ b/navtelemator/navtelemator/templates/info/room/roominfo_circuits.html
@@ -2,11 +2,13 @@
     <tr>
         <th>Circuit</th>
         <th>Step</th>
+        <th>Reference</th>
     </tr>
     {% for circuit_detail in circuit_details %}
     <tr>
         <td><a href="{{ circuit_detail.circuit.get_absolute_url }}">{{circuit_detail.circuit}}</a></td>
         <td>{{circuit_detail.index}}</td>
+        <td>{{circuit_detail.circuit.alias}}</td>
     </tr>
     {% endfor %}
 </table>
