Added link to kind from owner-detail

--- a/navtelemator/navtelemator/templates/telemator/owner_info.html
+++ b/navtelemator/navtelemator/templates/telemator/owner_info.html
@@ -17,5 +17,9 @@
         <th>Email</th>
         <td>{{ owner.email }}</td>
       </tr>
+    <tr>
+        <th>KIND</th>
+        <td><a href="https://kind.cs.uninett.no/org/edit_org.html?id={{owner.owner}};">Link</a> </td>
+    </tr>
 </table>
 {% endblock %}
