--- a/navtelemator/navtelemator/templates/info/room/roominfo.html
+++ b/navtelemator/navtelemator/templates/info/room/roominfo.html
@@ -70,6 +70,11 @@
                 Circuits through room
             </a>
             </li>
+                        <li aria-controls="cables">
+            <a href="{% url 'room-info-cables' room.id %}">
+                Cables from room
+            </a>
+            </li>
         </ul>
 
         <div id="roominfo">
@@ -85,6 +90,8 @@
         <div id="racks"></div>
 
         <div id="circuits"></div>
+
+        <div id="cables"></div>
 
     </div>
 
