--- a/navtelemator/navtelemator/templates/telemator/circuit_info.html
+++ b/navtelemator/navtelemator/templates/telemator/circuit_info.html
@@ -34,7 +34,7 @@
     </tr>
     {% for circuit_detail in circuit_details %}
     <tr>
-        <td><a href="{{ circuit_detail.end.get_absolute_url }}">{{circuit_detail.end}}</a></td>
+        <td><a href="{{ circuit_detail.name.get_absolute_url }}">{{circuit_detail.name}}</a></td>
         <td>{{circuit_detail.index}}</td>
     </tr>
     {% endfor %}
