--- a/navtelemator/navtelemator/templates/info/room/roominfo_cables.html
+++ b/navtelemator/navtelemator/templates/info/room/roominfo_cables.html
@@ -7,15 +7,15 @@
     </tr>
     {% for cable in cables %}
     <tr>
-        <td><a href="{{ cable.get_absolute_url }}">{{cable}}</a></td>
-        {% if cable.end_a.name == roomid %}
-        <td>{{cable.end_a}}</td>
-        <td><a href="{{ cable.end_b.get_absolute_url }}">{{cable.end_b}}</a></td>
+        <td><a href="{{ cable.get_absolute_url }}">{{cable.Cable}}</a></td>
+        {% if cable.end_a.End|lower == roomid %}
+        <td>{{cable.end_a.End}}</td>
+        <td><a href="{{ cable.end_b.get_absolute_url }}">{{cable.end_b.End}}</a></td>
         {% else %}
-                <td><a href="{{ cable.end_a.get_absolute_url }}">{{cable.end_a}}</a></td>
-                <td>{{cable.end_b}}</td>
+                <td><a href="{{ cable.end_a.get_absolute_url }}">{{cable.end_a.End}}</a></td>
+                <td>{{cable.end_b.End}}</td>
         {% endif %}
-        <td>{{cable.alias}}</td>
+        <td>{{cable.Reference}}</td>
     </tr>
     {% endfor %}
 </table>
