--- a/navtelemator/navtelemator/templates/info/room/roominfo_circuits.html
+++ b/navtelemator/navtelemator/templates/info/room/roominfo_circuits.html
@@ -1,14 +1,20 @@
 <table>
     <tr>
         <th>Circuit</th>
+        {% comment %}
         <th>Step</th>
+                {% endcomment %}
         <th>Reference</th>
+
     </tr>
     {% for circuit_detail in circuit_details %}
     <tr>
-        <td><a href="{{ circuit_detail.circuit.get_absolute_url }}">{{circuit_detail.circuit}}</a></td>
+        <td><a href="{{ circuit_detail.0.circuit.get_absolute_url }}">{{circuit_detail.0.Circuit}}</a></td>
+        {% comment %}
         <td>{{circuit_detail.index}}</td>
-        <td>{{circuit_detail.circuit.alias}}</td>
+                {% endcomment %}
+        <td>{{circuit_detail.circuit.Reference}}</td>
+
     </tr>
     {% endfor %}
 </table>
