--- a/navtelemator/navtelemator/templates/telemator/owner_info.html
+++ b/navtelemator/navtelemator/templates/telemator/owner_info.html
@@ -3,19 +3,19 @@
 <table>
     <tr>
         <th>Name</th>
-        <td>{{ owner.name }}</td>
+        <td>{{ owner.Name }}</td>
     </tr>
     <tr>
         <th>ID</th>
-        <td>{{ owner.owner }}</td>
+        <td>{{ owner.Owner }}</td>
     </tr>
     <tr>
         <th>Type</th>
-        <td>{{ owner.type }}</td>
+        <td>{{ owner.Type }}</td>
     </tr>
     <tr>
         <th>Email</th>
-        <td>{{ owner.email }}</td>
+        <td>{{ owner.Email }}</td>
       </tr>
     <tr>
         <th>KIND</th>
