Fixed using wrong fields in templates

--- a/navtelemator/templates/info/room/roominfo_cables.html
+++ b/navtelemator/templates/info/room/roominfo_cables.html
@@ -15,7 +15,7 @@
                 <td><a href="{{ cable.end_a.get_absolute_url }}">{{cable.end_a.End}}</a></td>
                 <td>{{cable.end_b.End}}</td>
         {% endif %}
-        <td>{{cable.Reference}}</td>
+        <td>{{cable.reference}}</td>
     </tr>
     {% endfor %}
 </table>
