--- a/navtelemator/templates/telemator/circuit_info.html
+++ b/navtelemator/templates/telemator/circuit_info.html
@@ -53,7 +53,7 @@
     {% for routingcable in routingcables %}
     <tr>
         <td><a href="{{ routingcable.cable.get_absolute_url }}">{{routingcable.Cable}}</a></td>
-        <td>{{routingcable.cable.Reference}}</td>
+        <td>{{routingcable.cable.reference}}</td>
     </tr>
     {% endfor %}
 </table>
