--- a/navtelemator/templates/telemator/owner_info.html
+++ b/navtelemator/templates/telemator/owner_info.html
@@ -19,7 +19,7 @@
       </tr>
     <tr>
         <th>KIND</th>
-        <td><a href="https://kind.cs.uninett.no/org/edit_org.html?id={{owner.owner}};">Link</a> </td>
+        <td><a href="https://kind.cs.uninett.no/org/edit_org.html?id={{owner.Owner}};">Link</a> </td>
     </tr>
 </table>
 {% endblock %}
