Fixed some small bugs detected during upgrade

--- a/navtelemator/templates/info/room/roominfo_circuits.html
+++ b/navtelemator/templates/info/room/roominfo_circuits.html
@@ -13,7 +13,7 @@
         {% comment %}
         <td>{{circuit_detail.index}}</td>
                 {% endcomment %}
-        <td>{{circuit_detail.circuit.Reference}}</td>
+        <td>{{circuit_detail.0.circuit.Reference}}</td>
 
     </tr>
     {% endfor %}
