--- a/navtelemator/templates/ipdevinfo/ipdev-details.html
+++ b/navtelemator/templates/ipdevinfo/ipdev-details.html
@@ -61,7 +61,7 @@
             What if
           </a>
         </li>
-        <li><a href="#circuits">Circuits</a></li>
+        <li><a href="{% url 'netbox-info-circuits' netbox.sysname %}">Circuits</a></li>
       </ul>
       {% include "ipdevinfo/frag-ipdevinfo.html" %}
       {% include "ipdevinfo/frag-neighbors.html" %}
@@ -71,7 +71,6 @@
       {% include "ipdevinfo/frag-alerts.html" %}
       {% include "ipdevinfo/frag-sensors.html" %}
       {% include "ipdevinfo/frag-services.html" %}
-      {% include "ipdevinfo/frag-circuits.html" %}
 
     {% else %}
 
