--- a/navtelemator/templates/ipdevinfo/frag-circuits.html
+++ b/navtelemator/templates/ipdevinfo/frag-circuits.html
@@ -2,10 +2,10 @@
     <table>
         <tr>
             <th>Circuit</th>
-                {% comment %}
+            {% comment %}
             <th>Step</th>
+            {% endcomment %}
             <th>Reference</th>
-                {% endcomment %}
             <th>Interface ID</th>
             <th>Interface name</th>
             <th>Channel</th>
@@ -15,8 +15,8 @@
             <td><a href="{{ circuit_detail.0.circuit.get_absolute_url }}">{{circuit_detail.0.Circuit}}</a></td>
             {% comment %}
             <td>{{circuit_detail.index}}</td>
-            <td>{{circuit_detail.circuit.alias}}</td>
             {% endcomment %}
+            <td>{{circuit_detail.circuit.Reference}}</td>
             <td>{{circuit_detail.1.Port}}</td>
             <td>{{circuit_detail.1.Label}}</td>
             <td>{{circuit_detail.1.Channel}}</td>
