--- a/navtelemator/templates/telemator/owner_info.html
+++ b/navtelemator/templates/telemator/owner_info.html
@@ -22,4 +22,37 @@
         <td><a href="https://kind.cs.uninett.no/org/edit_org.html?id={{owner.Owner}};">Link</a> </td>
     </tr>
 </table>
+
+{% if owner.cables %}
+<h5>Cables owned</h5>
+<table>
+    <tr>
+        <th>Cable</th>
+        <th>Reference</th>
+    </tr>
+    {% for cable in owner.cables %}
+    <tr>
+        <td><a href="{{ cable.get_absolute_url }}">{{cable.Cable}}</a></td>
+        <td>{{cable.reference}}</td>
+    </tr>
+    {% endfor %}
+</table>
+{% endif %}
+
+{% if owner.circuits %}
+<h5>Circuits owned</h5>
+<table>
+    <tr>
+        <th>Circuit</th>
+        <th>Reference</th>
+    </tr>
+    {% for circuit in owner.circuits %}
+    <tr>
+        <td><a href="{{ circuit.get_absolute_url }}">{{circuit.Circuit}}</a></td>
+        <td>{{circuit.Reference}}</td>
+    </tr>
+    {% endfor %}
+</table>
+{% endif %}
+
 {% endblock %}
