--- a/navtelemator/templates/ipdevinfo/frag-circuits.html
+++ b/navtelemator/templates/ipdevinfo/frag-circuits.html
@@ -16,7 +16,7 @@
             {% comment %}
             <td>{{circuit_detail.index}}</td>
             {% endcomment %}
-            <td>{{circuit_detail.circuit.Reference}}</td>
+            <td>{{circuit_detail.0.circuit.Reference}}</td>
             <td>{{circuit_detail.1.Port}}</td>
             <td>{{circuit_detail.1.Label}}</td>
             <td>{{circuit_detail.1.Channel}}</td>
