Fixed bug in links from circuit-info

--- a/navtelemator/templates/telemator/circuit_info.html
+++ b/navtelemator/templates/telemator/circuit_info.html
@@ -73,7 +73,7 @@
     </tr>
     {% for connection in connections %}
     <tr>
-        <td><a href="{{ connection.end.get_absolute_url }}">{{connection.1.End}}</a></td>
+        <td><a href="{{ connection.1.end.get_absolute_url }}">{{connection.1.End}}</a></td>
         <td>{{connection.1.Label}}</td>
     </tr>
     {% endfor %}
