--- a/navtelemator/templates/telemator/circuit_info.html
+++ b/navtelemator/templates/telemator/circuit_info.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block base_content %}
-<h3>{{circuit.Circuit}}</h3>
+<h3>Circuit: {{circuit.Circuit}}</h3>
 <table>
     <tr>
         <th>Owner</th>
