--- a/navtelemator/templates/telemator/customer_list.html
+++ b/navtelemator/templates/telemator/customer_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block base_content %}
 
-<h3>List of customers</h3>
+<h3>List of Customers</h3>
 <table>
     <tr>
         <th>Customer</th>
