added total number of circuits and customers to index. resolves #24

--- a/navtelemator/templates/telemator/index_info.html
+++ b/navtelemator/templates/telemator/index_info.html
@@ -3,8 +3,8 @@
 
 <h3>Lists in Telemator</h3>
 
-<a href="{% url 'circuit-list' %}">Circuit List</a><br>
-<a href="{% url 'customer-list' %}">Customer List</a>
+<a href="{% url 'circuit-list' %}">Circuit List</a> ({{total_circuits}})<br>
+<a href="{% url 'customer-list' %}">Customer List</a> ({{total_customers}})
 
 
 {% endblock %}
