--- a/navtelemator/templates/telemator/circuit_info.html
+++ b/navtelemator/templates/telemator/circuit_info.html
@@ -48,21 +48,6 @@
 </table>
 {% endif %}
 
-{% if routingcables %}
-<h5>List of cables in circuit</h5>
-<table>
-    <tr>
-        <th>Cable</th>
-        <th>Reference</th>
-    </tr>
-    {% for routingcable in routingcables %}
-    <tr>
-        <td><a href="{{ routingcable.cable.get_absolute_url }}">{{routingcable.Cable}}</a></td>
-        <td>{{routingcable.cable.reference}}</td>
-    </tr>
-    {% endfor %}
-</table>
-{% endif %}
 
 {% if cables %}
 <h5>List of cables in circuit</h5>
@@ -73,7 +58,39 @@
         <th>End</th>
         <th>Order</th>
     </tr>
-    {% for cable in cables %}
+    {% for cable in cables.0 %}
+    <tr>
+        <td><a href="{{ cable.get_absolute_url }}">{{cable.0.Cable}}</a></td>
+        <td>{{cable.1.0}}</td>
+        <td>{{cable.1.1}}</td>
+        <td>{{cable.1.2}}</td>
+    </tr>
+    {% endfor %}
+    {% if cables.2 %}
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    {% endif %}
+    {% for cable in cables.2 %}
+    <tr>
+        <td bgcolor="#ff9999"><a href="{{ cable.get_absolute_url }}">{{cable.0.Cable}}</a></td>
+        <td bgcolor="#ff9999">{{cable.1.0}}</td>
+        <td bgcolor="#ff9999">{{cable.1.1}}</td>
+        <td bgcolor="#ff9999">{{cable.1.2}}</td>
+    </tr>
+    {% endfor %}
+    {% if cables.2 %}
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    {% endif %}
+    {% for cable in cables.1 %}
     <tr>
         <td><a href="{{ cable.get_absolute_url }}">{{cable.0.Cable}}</a></td>
         <td>{{cable.1.0}}</td>
