--- a/navtelemator/templates/telemator/circuit_info.html
+++ b/navtelemator/templates/telemator/circuit_info.html
@@ -57,6 +57,7 @@
         <th>Start</th>
         <th>End</th>
         <th>Order</th>
+        <th>Port</th>
     </tr>
     {% for cable in cables.0 %}
     <tr>
@@ -64,6 +65,7 @@
         <td>{{cable.1.0}}</td>
         <td>{{cable.1.1}}</td>
         <td>{{cable.1.2}}</td>
+        <td>{{cable.1.3}}/{{cable.1.4}}</td>
     </tr>
     {% endfor %}
     {% if cables.2 %}
@@ -80,6 +82,8 @@
         <td bgcolor="#ff9999">{{cable.1.0}}</td>
         <td bgcolor="#ff9999">{{cable.1.1}}</td>
         <td bgcolor="#ff9999">{{cable.1.2}}</td>
+        <td bgcolor="#ff9999">{{cable.1.3}}/{{cable.1.4}}</td>
+
     </tr>
     {% endfor %}
     {% if cables.2 %}
@@ -96,6 +100,7 @@
         <td>{{cable.1.0}}</td>
         <td>{{cable.1.1}}</td>
         <td>{{cable.1.2}}</td>
+        <td>{{cable.1.3}}/{{cable.1.4}}</td>
     </tr>
     {% endfor %}
 </table>
