--- a/navtelemator/templates/telemator/circuit_info.html
+++ b/navtelemator/templates/telemator/circuit_info.html
@@ -48,6 +48,22 @@
 </table>
 {% endif %}
 
+<!--{% if routingcables %}-->
+<!--<h5>List of cables in circuit</h5>-->
+<!--<table>-->
+    <!--<tr>-->
+        <!--<th>Cable</th>-->
+        <!--<th>Reference</th>-->
+    <!--</tr>-->
+    <!--{% for routingcable in routingcables %}-->
+    <!--<tr>-->
+        <!--<td><a href="{{ routingcable.cable.get_absolute_url }}">{{routingcable.Cable}}</a></td>-->
+        <!--<td>{{routingcable.cable.reference}}</td>-->
+    <!--</tr>-->
+    <!--{% endfor %}-->
+<!--</table>-->
+<!--{% endif %}-->
+
 
 {% if cables %}
 <h5>List of cables in circuit</h5>
@@ -62,7 +78,7 @@
     {% for cable in cables.0 %}
     <tr>
         <td>{{cable.1.2}}</td>
-        <td><a href="{{ cable.get_absolute_url }}">{{cable.0.Cable}}</a></td>
+        <td><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
         <td>{{cable.1.0}}</td>
         <td>{{cable.1.1}}</td>
         <td>{{cable.1.3}}/{{cable.1.4}}</td>
@@ -79,7 +95,7 @@
     {% for cable in cables.2 %}
     <tr>
         <td bgcolor="#ff9999">{{cable.1.2}}</td>
-        <td bgcolor="#ff9999"><a href="{{ cable.get_absolute_url }}">{{cable.0.Cable}}</a></td>
+        <td bgcolor="#ff9999"><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
         <td bgcolor="#ff9999">{{cable.1.0}}</td>
         <td bgcolor="#ff9999">{{cable.1.1}}</td>
         <td bgcolor="#ff9999">{{cable.1.3}}/{{cable.1.4}}</td>
@@ -97,7 +113,7 @@
     {% for cable in cables.1 %}
     <tr>
         <td>{{cable.1.2}}</td>
-        <td><a href="{{ cable.get_absolute_url }}">{{cable.0.Cable}}</a></td>
+        <td><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
         <td>{{cable.1.0}}</td>
         <td>{{cable.1.1}}</td>
         <td>{{cable.1.3}}/{{cable.1.4}}</td>
