added check to compare database version. hardcoded version. message shows up on all pages if not correct version. #17

--- a/navtelemator/templates/telemator/index_info.html
+++ b/navtelemator/templates/telemator/index_info.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block base_content %}
+{% include "telemator/database_version.html" %}
+
 
 <h3>Lists in Telemator</h3>
 
