--- a/navtelemator/templates/telemator/cable_info.html
+++ b/navtelemator/templates/telemator/cable_info.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block base_content %}
+{% include "telemator/database_version.html" %}
+
 <h3>Cable: {{cable.Cable}}</h3>
 <table>
     <tr>
