--- a/navtelemator/templates/telemator/circuit_info.html
+++ b/navtelemator/templates/telemator/circuit_info.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block base_content %}
+{% include "telemator/database_version.html" %}
+
+
 <h3>Circuit: {{circuit.Circuit}}</h3>
 <table>
     <tr>
