--- a/navtelemator/templates/telemator/circuit_info.html
+++ b/navtelemator/templates/telemator/circuit_info.html
@@ -3,6 +3,85 @@
 {% include "telemator/database_version.html" %}
 
 
+
+
+<h4>Linecard</h4>
+<table>
+    {% if netbox %}
+    <tr>
+        <td>[{{netbox.2}}]</td>
+        <td><a href="{{ netbox.0.end.get_absolute_url }}">{{netbox.0.End}}</a></td>
+        <td>{{netbox.0.Card}}</td>
+        <td>{{netbox.0.Label}}</td>
+    </tr>
+    {% endif %}
+
+    {% if cables.0 or cables.1 or cables.2 %}
+
+    {% for cable in cables.0 %}
+    <tr>
+        <td>{{cable.1.2}}</td>
+        <td><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
+        <td>{{cable.1.0}}</td>
+        <td>{{cable.1.1}}</td>
+        <td>{{cable.1.3}}/{{cable.1.4}}</td>
+    </tr>
+    {% endfor %}
+    {% if cables.2 %}
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    {% endif %}
+    {% for cable in cables.2 %}
+    <tr>
+        <td bgcolor="#ff9999">{{cable.1.2}}</td>
+        <td bgcolor="#ff9999"><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
+        <td bgcolor="#ff9999">{{cable.1.0}}</td>
+        <td bgcolor="#ff9999">{{cable.1.1}}</td>
+        <td bgcolor="#ff9999">{{cable.1.3}}/{{cable.1.4}}</td>
+
+    </tr>
+    {% endfor %}
+    {% if cables.2 %}
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    {% endif %}
+    {% for cable in cables.1 %}
+    <tr>
+        <td>{{cable.1.2}}</td>
+        <td><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
+        <td>{{cable.1.0}}</td>
+        <td>{{cable.1.1}}</td>
+        <td>{{cable.1.3}}/{{cable.1.4}}</td>
+    </tr>
+    {% endfor %}
+
+{% endif %}
+
+    {% if netbox %}
+    <tr>
+        <td>[{{netbox.3}}]</td>
+        <td><a href="{{ netbox.1.end.get_absolute_url }}">{{netbox.1.End}}</a></td>
+        <td>{{netbox.1.Card}}</td>
+        <td>{{netbox.1.Label}}</td>
+    </tr>
+    {% endif %}
+</table>
+
+
+
+
+
+
+
+
 <h3>Circuit: {{circuit.Circuit}}</h3>
 <table>
     <tr>
@@ -58,17 +137,13 @@
     <tr>
         <th>Order</th>
         <th>Cable</th>
-        <th>Start</th>
-        <th>End</th>
-        <th>Port</th>
+        <th>Start/End</th>
     </tr>
     {% for cable in cables.0 %}
     <tr>
         <td>{{cable.1.2}}</td>
         <td><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
-        <td>{{cable.1.0}}</td>
-        <td>{{cable.1.1}}</td>
-        <td>{{cable.1.3}}/{{cable.1.4}}</td>
+        <td>{{cable.1.0}}<br>{{cable.1.1}}</td>
     </tr>
     {% endfor %}
     {% if cables.2 %}
@@ -84,9 +159,7 @@
         <td bgcolor="#ff9999">{{cable.1.2}}</td>
         <td bgcolor="#ff9999"><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
         <td bgcolor="#ff9999">{{cable.1.0}}</td>
-        <td bgcolor="#ff9999">{{cable.1.1}}</td>
-        <td bgcolor="#ff9999">{{cable.1.3}}/{{cable.1.4}}</td>
-
+        <td bgcolor="#ff9999">{{cable.1.0}}<br>{{cable.1.1}}</td>
     </tr>
     {% endfor %}
     {% if cables.2 %}
@@ -101,9 +174,7 @@
     <tr>
         <td>{{cable.1.2}}</td>
         <td><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
-        <td>{{cable.1.0}}</td>
-        <td>{{cable.1.1}}</td>
-        <td>{{cable.1.3}}/{{cable.1.4}}</td>
+        <td>{{cable.1.0}}<br>{{cable.1.1}}</td>
     </tr>
     {% endfor %}
 </table>
