--- a/navtelemator/templates/telemator/circuit_info.html
+++ b/navtelemator/templates/telemator/circuit_info.html
@@ -4,8 +4,8 @@
 
 
 
-
-<h4>Linecard</h4>
+<div style="position: absolute; width: 60%; right: 20px">
+<h3>Linecard</h3>
 <table>
     {% if netbox %}
     <tr>
@@ -74,7 +74,7 @@
     </tr>
     {% endif %}
 </table>
-
+</div>
 
 
 
