--- a/navtelemator/templates/telemator/circuit_info.html
+++ b/navtelemator/templates/telemator/circuit_info.html
@@ -9,7 +9,7 @@
 <table>
     {% if netbox %}
     <tr>
-        <td>[{{netbox.2}}]</td>
+        <td>S___[{{netbox.2}}]</td>
         <td><a href="{{ netbox.0.end.get_absolute_url }}">{{netbox.0.End}}</a></td>
         <td>{{netbox.0.Card}}</td>
         <td>{{netbox.0.Label}}</td>
@@ -17,49 +17,43 @@
     {% endif %}
 
     {% if cables.0 or cables.1 or cables.2 %}
-
     {% for cable in cables.0 %}
     <tr>
-        <td>{{cable.1.2}}</td>
+        <td> * ___[{{cable.1.0}}]</td>
         <td><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
-        <td>{{cable.1.0}}</td>
-        <td>{{cable.1.1}}</td>
-        <td>{{cable.1.3}}/{{cable.1.4}}</td>
+    </tr>
+    <tr>
+        <td>|__{{cable.1.3}}/{{cable.1.4}}</td>
     </tr>
     {% endfor %}
     {% if cables.2 %}
     <tr>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+
     </tr>
     {% endif %}
     {% for cable in cables.2 %}
     <tr>
-        <td bgcolor="#ff9999">{{cable.1.2}}</td>
+        <td bgcolor="#ff9999"> *____[{{cable.1.0}}]</td>
         <td bgcolor="#ff9999"><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
-        <td bgcolor="#ff9999">{{cable.1.0}}</td>
-        <td bgcolor="#ff9999">{{cable.1.1}}</td>
-        <td bgcolor="#ff9999">{{cable.1.3}}/{{cable.1.4}}</td>
-
+    </tr>
+    <tr>
+        <td bgcolor="#ff9999">|__{{cable.1.3}}/{{cable.1.4}}</td>
     </tr>
     {% endfor %}
     {% if cables.2 %}
     <tr>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+
     </tr>
     {% endif %}
     {% for cable in cables.1 %}
     <tr>
-        <td>{{cable.1.2}}</td>
+        <td> *___[{{cable.1.0}}]</td>
         <td><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
-        <td>{{cable.1.0}}</td>
-        <td>{{cable.1.1}}</td>
-        <td>{{cable.1.3}}/{{cable.1.4}}</td>
+    </tr>
+    <tr>
+        <td>|__{{cable.1.3}}/{{cable.1.4}}</td>
     </tr>
     {% endfor %}
 
@@ -67,7 +61,7 @@
 
     {% if netbox %}
     <tr>
-        <td>[{{netbox.3}}]</td>
+        <td>E___[{{netbox.3}}]</td>
         <td><a href="{{ netbox.1.end.get_absolute_url }}">{{netbox.1.End}}</a></td>
         <td>{{netbox.1.Card}}</td>
         <td>{{netbox.1.Label}}</td>
@@ -75,11 +69,6 @@
     {% endif %}
 </table>
 </div>
-
-
-
-
-
 
 
 <h3>Circuit: {{circuit.Circuit}}</h3>
@@ -158,7 +147,6 @@
     <tr>
         <td bgcolor="#ff9999">{{cable.1.2}}</td>
         <td bgcolor="#ff9999"><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
-        <td bgcolor="#ff9999">{{cable.1.0}}</td>
         <td bgcolor="#ff9999">{{cable.1.0}}<br>{{cable.1.1}}</td>
     </tr>
     {% endfor %}
@@ -195,5 +183,7 @@
     {% endfor %}
 </table>
 {% endif %}
+
+
 
 {% endblock %}
