--- a/navtelemator/templates/telemator/circuit_info.html
+++ b/navtelemator/templates/telemator/circuit_info.html
@@ -4,12 +4,13 @@
 
 
 
-<div style="position: absolute; width: 60%; right: 20px">
+<div style="position: absolute; width: 60%; right: 10px">
 <h3>Linecard</h3>
 <table>
     {% if netbox %}
     <tr>
-        <td>S___[{{netbox.2}}]</td>
+        <td>S</td>
+        <td>[{{netbox.2}}]</td>
         <td><a href="{{ netbox.0.end.get_absolute_url }}">{{netbox.0.End}}</a></td>
         <td>{{netbox.0.Card}}</td>
         <td>{{netbox.0.Label}}</td>
@@ -25,58 +26,102 @@
 
     {% if cables.0 or cables.1 or cables.2 %}
     {% for cable in cables.0 %}
+
+
+
+    {% if cable.1.0 == '/\\' %}
     <tr>
-        <td> * ___[{{cable.1.0}}]</td>
-        <td>{{cable.1.5}}</td>
-        <td>{{cable.1.6}}</td>
-    </tr>
-    <tr>
-        <td>|__<a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
-    </tr>
-    <tr>
-        <td>|__{{cable.1.3}}/{{cable.1.4}}</td>
-    </tr>
-    {% endfor %}
-
-
-
-
-
-    {% if cables.2 %}
-    <tr>
-        <td></td>
+        <td>{{cable.1.0}}</td>
+        <td>Skjøtt med kabel: </td>
+        <td>[{{cable.1.1}}]</td>
 
     </tr>
-    {% endif %}
-    {% for cable in cables.2 %}
+    <tr><td>\/</td></tr>
     <tr>
-        <td bgcolor="#ff9999"> *____[{{cable.1.0}}]</td>
-        <td bgcolor="#ff9999"><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
-    </tr>
-    <tr>
-        <td bgcolor="#ff9999">|__{{cable.1.3}}/{{cable.1.4}}</td>
-    </tr>
-    {% endfor %}
-
-
-
-
-
-
-
-    {% if cables.2 %}
-    <tr>
-        <td></td>
-
-    </tr>
-    {% endif %}
-    {% for cable in cables.1 %}
-    <tr>
-        <td> *___[{{cable.1.0}}]</td>
+        <td>|</td>
         <td><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
     </tr>
     <tr>
-        <td>|__{{cable.1.3}}/{{cable.1.4}}</td>
+        <td>|</td>
+        <td>{{cable.1.4}}+{{cable.1.5}}</td>
+    </tr>
+    <tr>
+        <td>*</td>
+        <td>[{{cable.1.2}}]</td>
+        <td>{{cable.1.6}}</td>
+        <td>{{cable.1.7}} {{cable.1.8}}</td>
+    </tr>
+    {% else %}
+    <tr>
+        <td>{{cable.1.0}}</td>
+        <td>[{{cable.1.1}}]</td>
+        <td>{{cable.1.6}}</td>
+        <td>{{cable.1.7}} {{cable.1.8}}</td>
+    </tr>
+    <tr>
+        <td>|</td>
+        <td><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
+    </tr>
+    <tr>
+        <td>|</td>
+        <td>{{cable.1.4}}+{{cable.1.5}}</td>
+    </tr>
+    {% endif %}
+
+
+
+
+
+
+    {% endfor %}
+
+
+
+
+
+    {% if cables.2 %}
+    {% endif %}
+    {% for cable in cables.2 %}
+    <tr>
+        <td bgcolor="#ff9999">*</td>
+        <td bgcolor="#ff9999"> [{{cable.1.0}}]</td>
+        <td bgcolor="#ff9999">{{cable.1.5}}</td>
+        <td bgcolor="#ff9999">{{cable.1.6}} {{cable.1.7}}</td>
+    </tr>
+    <tr>
+        <td bgcolor="#ff9999">|</td>
+        <td bgcolor="#ff9999"><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
+
+    </tr>
+    <tr>
+        <td bgcolor="#ff9999">|</td>
+        <td bgcolor="#ff9999">{{cable.1.3}}+{{cable.1.4}}</td>
+    </tr>
+    {% endfor %}
+    {% if cables.2 %}
+    {% endif %}
+
+
+
+
+
+
+
+
+    {% for cable in cables.1 %}
+    <tr>
+        <td>*</td>
+        <td>[{{cable.1.1}}]</td>
+        <td>{{cable.1.6}}</td>
+        <td>{{cable.1.7}} {{cable.1.8}}</td>
+    </tr>
+    <tr>
+        <td>|</td>
+        <td><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
+    </tr>
+    <tr>
+        <td>|</td>
+        <td>{{cable.1.4}}+{{cable.1.5}}</td>
     </tr>
     {% endfor %}
 
@@ -96,7 +141,8 @@
 
     {% if netbox %}
     <tr>
-        <td>E___[{{netbox.3}}]</td>
+        <td>E</td>
+        <td>[{{netbox.3}}]</td>
         <td><a href="{{ netbox.1.end.get_absolute_url }}">{{netbox.1.End}}</a></td>
         <td>{{netbox.1.Card}}</td>
         <td>{{netbox.1.Label}}</td>
@@ -165,9 +211,9 @@
     </tr>
     {% for cable in cables.0 %}
     <tr>
-        <td>{{cable.1.2}}</td>
+        <td>{{cable.1.3}}</td>
         <td><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
-        <td>{{cable.1.0}}<br>{{cable.1.1}}</td>
+        <td>{{cable.1.1}}<br>{{cable.1.2}}</td>
     </tr>
     {% endfor %}
     {% if cables.2 %}
@@ -180,9 +226,9 @@
     {% endif %}
     {% for cable in cables.2 %}
     <tr>
-        <td bgcolor="#ff9999">{{cable.1.2}}</td>
+        <td bgcolor="#ff9999">{{cable.1.3}}</td>
         <td bgcolor="#ff9999"><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
-        <td bgcolor="#ff9999">{{cable.1.0}}<br>{{cable.1.1}}</td>
+        <td bgcolor="#ff9999">{{cable.1.1}}<br>{{cable.1.12}</td>
     </tr>
     {% endfor %}
     {% if cables.2 %}
@@ -195,9 +241,9 @@
     {% endif %}
     {% for cable in cables.1 %}
     <tr>
-        <td>{{cable.1.2}}</td>
+        <td>{{cable.1.3}}</td>
         <td><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
-        <td>{{cable.1.0}}<br>{{cable.1.1}}</td>
+        <td>{{cable.1.1}}<br>{{cable.1.2}}</td>
     </tr>
     {% endfor %}
 </table>
@@ -219,6 +265,9 @@
 </table>
 {% endif %}
 
+<div style="margin-bottom: 100px">
 
+
+</div>
 
 {% endblock %}
