--- a/navtelemator/templates/telemator/circuit_info.html
+++ b/navtelemator/templates/telemator/circuit_info.html
@@ -3,10 +3,11 @@
 {% include "telemator/database_version.html" %}
 
 
-
+    <!--beginning of linecard-->
 <div style="position: absolute; width: 60%; right: 10px">
 <h3>Linecard</h3>
 <table>
+    <!--start netbox-->
     {% if netbox %}
     <tr>
         <td>S</td>
@@ -18,17 +19,9 @@
     {% endif %}
 
 
-
-
-
-
-
-
     {% if cables.0 or cables.1 or cables.2 %}
+    <!--forward iterating list-->
     {% for cable in cables.0 %}
-
-
-
     {% if cable.1.0 == '/\\' %}
     <tr>
         <td>{{cable.1.0}}</td>
@@ -56,7 +49,7 @@
         <td>{{cable.1.0}}</td>
         <td>[{{cable.1.1}}]</td>
         <td>{{cable.1.6}}</td>
-        <td>{{cable.1.7}} {{cable.1.8}}</td>
+        <td>{{cable.1.7}}  {{cable.1.8}}</td>
     </tr>
     <tr>
         <td>|</td>
@@ -67,26 +60,20 @@
         <td>{{cable.1.4}}+{{cable.1.5}}</td>
     </tr>
     {% endif %}
-
-
-
-
-
-
     {% endfor %}
 
 
 
 
-
+    <!--things without an order in the list-->
     {% if cables.2 %}
     {% endif %}
     {% for cable in cables.2 %}
     <tr>
-        <td bgcolor="#ff9999">*</td>
-        <td bgcolor="#ff9999"> [{{cable.1.0}}]</td>
-        <td bgcolor="#ff9999">{{cable.1.5}}</td>
-        <td bgcolor="#ff9999">{{cable.1.6}} {{cable.1.7}}</td>
+        <td bgcolor="#ff9999">{{cable.1.0}}</td>
+        <td bgcolor="#ff9999"> [{{cable.1.1}}]</td>
+        <td bgcolor="#ff9999">{{cable.1.6}}</td>
+        <td bgcolor="#ff9999">{{cable.1.7}} {{cable.1.8}}</td>
     </tr>
     <tr>
         <td bgcolor="#ff9999">|</td>
@@ -95,19 +82,13 @@
     </tr>
     <tr>
         <td bgcolor="#ff9999">|</td>
-        <td bgcolor="#ff9999">{{cable.1.3}}+{{cable.1.4}}</td>
+        <td bgcolor="#ff9999">{{cable.1.4}}+{{cable.1.5}}</td>
     </tr>
     {% endfor %}
     {% if cables.2 %}
     {% endif %}
 
-
-
-
-
-
-
-
+    <!--backward iterating in the list-->
     {% for cable in cables.1 %}
     <tr>
         <td>*</td>
@@ -127,18 +108,7 @@
 
 {% endif %}
 
-
-
-
-
-
-
-
-
-
-
-
-
+    <!--end netbox-->
     {% if netbox %}
     <tr>
         <td>E</td>
@@ -150,7 +120,7 @@
     {% endif %}
 </table>
 </div>
-
+    <!--end of linecard-->
 
 <h3>Circuit: {{circuit.Circuit}}</h3>
 <table>
@@ -228,7 +198,7 @@
     <tr>
         <td bgcolor="#ff9999">{{cable.1.3}}</td>
         <td bgcolor="#ff9999"><a href="{{ cable.0.get_absolute_url }}">{{cable.0.Cable}}</a></td>
-        <td bgcolor="#ff9999">{{cable.1.1}}<br>{{cable.1.12}</td>
+        <td bgcolor="#ff9999">{{cable.1.1}}<br>{{cable.1.2}}</td>
     </tr>
     {% endfor %}
     {% if cables.2 %}
