more doc about local_settings

--- a/ansible/local_settings.py.j2
+++ b/ansible/local_settings.py.j2
@@ -29,7 +29,7 @@ TM_USER = 'tmreader'
 # Password
 
 # FIXME
-TM_PASSWORD = 'EvzFJNYq33jtMGNSiA5w'
+TM_PASSWORD = '{{tm_password}}'
 
 # Name of database to use
 TM_DBNAME = 'TM_UNINETT'
